<resources>
    <string name="app_name">Movie</string>
    <string name="hello_world">From the Square world,\nHello, %1$s!</string>
    <string name="tile_label">Example tile</string>
    <string name="title_activity_presentation._main">presentation.MainActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="complication_label">Example complication</string>
    <string name="title_activity_presentation._sign_in">presentation.SignInActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_presentation._result">presentation.ResultActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="mainTextView">WorldCinema</string>
    <string name="emailTextView">E-mail</string>
    <string name="hintEmailEditText">you@example.com</string>
    <string name="passwordTextView">Password</string>
    <string name="hintPasswordEditText">Your password</string>
    <string name="signInButtonText">SignIn</string>
    <string name="emptyFields">Не все поля заполнены</string>
    <string name="debate">Обсуждения</string>
    <string name="favourites">Избранное</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">Новое</string>
    <string name="witcher">Witcher</string>
    <string name="jessica_jones">Jessica Jones</string>
    <string name="magicians">Magicians</string>
    <string-array name="arrayListDebate">
        <item>Lucifer</item>
        <item>The Witcher</item>
        <item>LOST</item>
        <item>The magicans</item>
        <item>Sea</item>
        <item>Skins</item>
    </string-array>
</resources>