<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".SignInActivity"
    tools:deviceIds="wear">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:gravity="left"
            android:text="@string/emailTextView"
            android:textColor="@color/blue"
            android:textSize="9dp"
            android:textStyle="normal"
            tools:ignore="TextSizeCheck"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center_horizontal"
            android:text="@string/mainTextView"
            android:textColor="@color/blue"
            android:textSize="15dp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-10dp"
            android:gravity="left"
            android:hint="@string/hintEmailEditText"
            android:text="@string/hintEmailEditText"
            android:textColor="@color/light_grey"
            android:textSize="9dp"
            android:textStyle="normal"
            tools:ignore="TextSizeCheck"></EditText>

        <TextView
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="20dp"
            android:gravity="left"
            android:text="@string/passwordTextView"
            android:textColor="@color/blue"
            android:textSize="9dp"
            android:textStyle="normal"
            tools:ignore="TextSizeCheck"></TextView>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-10dp"
            android:gravity="left"
            android:hint="@string/hintPasswordEditText"
            android:text="@string/hintPasswordEditText"
            android:textColor="@color/light_grey"
            android:textSize="9dp"
            android:textStyle="normal"
            tools:ignore="TextSizeCheck"></EditText>

        <Button
            android:id="@+id/signinButton"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/blue"
            android:onClick="signIn"
            android:text="@string/signInButtonText"
            android:textAllCaps="false"
            android:textSize="10dp"
            tools:ignore="TextSizeCheck">

        </Button>

    </LinearLayout>
</LinearLayout>