<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".ResultActivity"
    tools:deviceIds="wear">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="50dp"
                        android:layout_gravity="right"
                        android:layout_marginRight="25dp"
                        android:onClick="clickImage"
                        android:src="@drawable/roundbutton">
                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:layout_marginRight="11dp"
                        android:text="@string/debate"
                        android:textColor="@color/white"
                        android:textSize="10dp"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="50dp"
                            android:layout_gravity="left"
                            android:onClick="clickImage2"

                            android:src="@drawable/icon2">
                        </ImageView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:layout_marginLeft="3dp"
                            android:text="@string/news"
                            android:textColor="@color/white"
                            android:textSize="10dp"></TextView>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="right"
                        android:layout_marginRight="25dp"
                        android:src="@drawable/icon3"></ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:layout_marginRight="15dp"
                        android:text="@string/favourites"
                        android:textColor="@color/white"
                        android:textSize="10dp"></TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
</LinearLayout>